Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,7 @@ body {
     }
 
     .cards-container {
+        height: 100% !important;
         flex-direction: column !important;
 
         & > card {
@@ -154,7 +155,7 @@ body {
     flex-direction: row;
     padding: 0.25rem;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
 
     & > a {
         height: 100%;
